crates/integration-tests/src/tests/snapshots/integration_tests__tests__remote_relationship__aggregates_request_with_variable_sets.snap
---
source: crates/integration-tests/src/tests/remote_relationship.rs
expression: "run_connector_query(Connector::SampleMflix,\nquery_request().collection(\"movies\").variables([[(\"year\",\njson!(2014))]]).query(query().predicate(binop(\"_eq\", target!(\"year\"),\nvariable!(year))).aggregates([(\"average_viewer_rating\",\ncolumn_aggregate(\"tomatoes.viewer.rating\", \"avg\").into(),),\ncolumn_count_aggregate!(\"rated_count\" => \"rated\", distinct: true),\nstar_count_aggregate!(\"count\"),])),).await?"
---
- aggregates:
    average_viewer_rating: 3.2435114503816793
    rated_count: 10
    count: 1147
